@@ -6,17 +6,14 @@ import fr.lolmc.ability.base.BasicAttackAbility;
 import fr.lolmc.stats.ResourceSystem;
 import fr.lolmc.champion.base.BaseChampion;
 import fr.lolmc.stats.ChampionStats;
-import fr.lolmc.util.DamageUtil;
 import fr.lolmc.util.TargetingUtil;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.*;
-import org.bukkit.entity.Entity;
 import org.bukkit.entity.Player;
 import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
 import org.bukkit.scheduler.BukkitRunnable;
-import org.bukkit.util.Vector;
 import java.util.*;
 
 public class Leona extends BaseChampion implements fr.lolmc.champion.base.StatefulChampion {
@@ -148,7 +145,7 @@ public class Leona extends BaseChampion implements fr.lolmc.champion.base.Statef
             if(hits.isEmpty()){c.sendActionBar(Component.text("⚔ Lame manquée!",NamedTextColor.GRAY));return;}
             for(var __t : hits) TargetingUtil.dealDamage(c, __t, dmg, TargetingUtil.DmgType.MAGICAL);
             // Dash sur le dernier ennemi touché + root
-            var last=hits.get(hits.size()-1);
+            var last=hits.getLast();
             var dest=last.getLocation().clone().subtract(last.getLocation().getDirection().multiply(1.0));
             dest.setY(c.getLocation().getY());
             c.teleport(dest);
